--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* tehpotatoking.com
+* niteLite.io
 
 Personal blog powered by Wintersmith static site generator
 
@@ -12,8 +12,8 @@ installed automatically with NodeJS. [[https://www.ruby-lang.org/en/downloads/][
 Setting up a buildable project is very simple:
 
 #+begin_src sh
-git clone https://github.com/hackbytes/tehpotatoking.com.git
-cd tehpotatoking.com
+git clone https://github.com/hackbytes/nitelite.io.git
+cd nitelite.io
 ./init.sh
 #+end_src
 
@@ -149,8 +149,8 @@ grunt comments-push
 
 ** Copyright / License
 
-tehpotatoking.com is Copyright (c) 2014 tehPotatoKing.com, licensed under the 
-GNU GPL v2.0.
+niteLite.io is Copyright (c) 2014 niteLite.io, licensed under the GNU GPL 
+v2.0.
 
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
@@ -164,7 +164,7 @@ General Public License for more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
 
-tehpotatoking.com includes works under other copyright notices and distributed
+niteLite.io includes works under other copyright notices and distributed
 according to the terms of the GNU General Public License or a compatible
 license, including:
 
